styling to align some nav links to the right and to adjust correctly on shrink

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,7 +34,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+.rightalign-nav-links {
+  position: relative;
+  right: 15px;
+}
+@media only screen and (max-width: 991px) {
+  .rightalign-nav-links {
+    position: relative;
+    left: 10px;
+  }
+}
 @media only screen and (max-width: 767px) {
   .hide-on-shrink {
     display: none;
